Implement list_render class.
This implements the list_render closure class that allows for
progressive, responsive rendering of long lists.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -95,6 +95,7 @@
         "message_fetch": false,
         "favicon": false,
         "condense": false,
+        "list_render": false,
         "floating_recipient_bar": false,
         "tab_bar": false,
         "emoji": false,
