--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "moment": false,
         "i18n": false,
         "DynamicText": false,
+        "Modal": false,
         "bridge": false,
         "page_params": false,
         "status_classes": false,
